Change buttons to primary

--- a/alcs-frontend/src/app/features/application/decision/decision-v2/revert-to-draft-dialog/revert-to-draft-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/revert-to-draft-dialog/revert-to-draft-dialog.component.html
@@ -24,7 +24,7 @@
 
 <mat-dialog-actions align="end">
   <div class="button-container">
-    <button mat-stroked-button color="accent" [mat-dialog-close]="false">Cancel</button>
-    <button mat-flat-button color="accent" type="button" (click)="onConfirm()">Confirm Revert to Draft</button>
+    <button mat-stroked-button color="primary" [mat-dialog-close]="false">Cancel</button>
+    <button mat-flat-button color="primary" type="button" (click)="onConfirm()">Confirm Revert to Draft</button>
   </div>
 </mat-dialog-actions>
