--- a/alcs-frontend/src/app/features/application/overview/uncancel-application-dialog/uncancel-application-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/overview/uncancel-application-dialog/uncancel-application-dialog.component.html
@@ -5,7 +5,10 @@
   <div class="grid">
     <p>
       The application's portal status will revert back to:<br /><br />
-      <app-application-submission-status-type-pill *ngIf="status" [type]="status"></app-application-submission-status-type-pill>
+      <app-application-submission-status-type-pill
+        *ngIf="status"
+        [type]="status"
+      ></app-application-submission-status-type-pill>
     </p>
     <p>Are you sure you want to undo cancellation?</p>
   </div>
@@ -13,7 +16,7 @@
 
 <mat-dialog-actions align="end">
   <div class="button-container">
-    <button mat-stroked-button color="accent" [mat-dialog-close]="false">No</button>
-    <button mat-flat-button color="accent" type="button" (click)="onConfirm()">Yes</button>
+    <button mat-stroked-button color="primary" [mat-dialog-close]="false">No</button>
+    <button mat-flat-button color="primary" type="button" (click)="onConfirm()">Yes</button>
   </div>
 </mat-dialog-actions>
