Update Overview timeline with new statuses
* Update mapping of statuses and new HTML labels

--- a/alcs-frontend/src/app/shared/timeline/timeline.component.html
+++ b/alcs-frontend/src/app/shared/timeline/timeline.component.html
@@ -23,7 +23,7 @@
             <a [routerLink]="event.link">Add date</a>
           </span>
         </td>
-        <td>{{ event.name }}</td>
+        <td><span [innerHTML]="event.htmlText"></span></td>
       </tr>
     </tbody>
   </table>
