Add Local Government options for LG Users
* Replace owners with their own contact name
* Create new Government type Owner
* Update set primary contact to accept multiple types

--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -36,8 +36,15 @@
       <app-no-data [showRequired]="showErrors" *ngIf="!primaryContact?.lastName"></app-no-data>
     </div>
     <div class="subheading2 grid-1">
-      <span *ngIf="primaryContact?.type?.code !== APPLICATION_OWNER.CROWN">Organization (optional)</span>
+      <span
+        *ngIf="
+          primaryContact?.type?.code !== APPLICATION_OWNER.CROWN &&
+          primaryContact?.type?.code !== APPLICATION_OWNER.GOVERNMENT
+        "
+        >Organization (optional)</span
+      >
       <span *ngIf="primaryContact?.type?.code === APPLICATION_OWNER.CROWN">Ministry/Department Responsible</span>
+      <span *ngIf="primaryContact?.type?.code === APPLICATION_OWNER.GOVERNMENT">Department</span>
     </div>
     <div class="grid-double">
       {{ primaryContact?.organizationName }}
