Show warning banner when user selects their own government

--- a/portal-frontend/src/app/features/edit-submission/select-government/select-government.component.html
+++ b/portal-frontend/src/app/features/edit-submission/select-government/select-government.component.html
@@ -45,6 +45,11 @@
   will need to contact the ALC directly: &nbsp;<a href="mailto:ALC.Portal@gov.bc.ca">ALC.Portal@gov.bc.ca</a
   >&nbsp;/&nbsp;<a href="tel:236-468-3342">236-468-3342</a>
 </app-warning-banner>
+<app-warning-banner *ngIf="selectedOwnGovernment" class="full-row">
+  You're logged in with a Business BCeID that is associated with the government selected above. You will have the
+  opportunity to complete the local or first nation government review form immediately after this application is
+  submitted.
+</app-warning-banner>
 <p>
   Please Note: If your Local or First Nation Government is not listed, please contact the ALC directly.
   <a href="mailto:ALC.Portal@gov.bc.ca">ALC.Portal@gov.bc.ca</a> / <a href="tel:236-468-3342">236-468-3342</a>
