--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -93,6 +93,14 @@
           >ALC.Portal@gov.bc.ca</a
         >&nbsp;/&nbsp;<a href="tel:236-468-3342">236-468-3342</a>
       </app-warning-banner>
+      <app-warning-banner
+        *ngIf="showErrors && localGovernment && localGovernment.matchesUserGuid"
+        class="full-row error"
+      >
+        You're logged in with a Business BCeID that is associated with the government selected above. You will have the
+        opportunity to complete the local or first nation government review form immediately after this application is
+        submitted.
+      </app-warning-banner>
     </div>
     <div *ngIf="showEdit" class="edit-button">
       <button mat-flat-button (click)="onNavigateToStep(3)" color="accent">Edit Section</button>
