--- a/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
@@ -4,8 +4,9 @@
       [submission]="submission"
       [fileNumber]="fileNumber"
       [applicationType]="application.type.code"
-      [isSubmitted]='isSubmitted'
-      [showEdit]='true'
+      [isSubmitted]="isSubmitted"
+      [wasSubmittedToLfng]="wasSubmittedToLfng"
+      [showEdit]="true"
     ></app-application-details>
   </div>
 </div>
