added empty conditions message

--- a/alcs-frontend/src/app/features/application/decision/conditions/conditions.component.html
+++ b/alcs-frontend/src/app/features/application/decision/conditions/conditions.component.html
@@ -54,6 +54,9 @@
           </ng-container>
         </div>
       </div>
+      <div class="no-conditions" *ngIf="decision.conditions && decision.conditions.length < 1">
+        No conditions added. Return to decision draft to add conditions.
+      </div>
       <div *ngFor="let condition of decision.conditions; let j = index">
         <app-condition
           [ngClass]="{ 'condition-container': true, 'even-condition': j % 2 }"
