Rename variable to clarify app status

--- a/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
@@ -4,7 +4,7 @@
       [submission]="submission"
       [fileNumber]="fileNumber"
       [applicationType]="application.type.code"
-      [isSubmitted]="isSubmitted"
+      [isSubmittedToAlc]="isSubmittedToAlc"
       [wasSubmittedToLfng]="wasSubmittedToLfng"
       [showEdit]="true"
     ></app-application-details>
