Show uneditable app info if app was submitted to lfng (#803)
* Show uneditable app info if app was submitted to lfng

* Use onChanges to handle input property changes

* Add onChanges fn argument

* Rename variable to clarify app status

* Refactor code

--- a/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/applicant-info.component.html
@@ -4,8 +4,9 @@
       [submission]="submission"
       [fileNumber]="fileNumber"
       [applicationType]="application.type.code"
-      [isSubmitted]='isSubmitted'
-      [showEdit]='true'
+      [isSubmittedToAlc]="isSubmittedToAlc"
+      [wasSubmittedToLfng]="wasSubmittedToLfng"
+      [showEdit]="true"
     ></app-application-details>
   </div>
 </div>
