Start FNLG review when submitting to yourself
* Immediately redirect to start review URL when submitting to your own LG
* When creating a review if the primary contact is Government, copy over the contact details

--- a/portal-frontend/src/app/features/application-details/application-details.component.html
+++ b/portal-frontend/src/app/features/application-details/application-details.component.html
@@ -100,10 +100,7 @@
           >ALC.Portal@gov.bc.ca</a
         >&nbsp;/&nbsp;<a href="tel:236-468-3342">236-468-3342</a>
       </app-warning-banner>
-      <app-warning-banner
-        *ngIf="showErrors && localGovernment && localGovernment.matchesUserGuid"
-        class="full-row error"
-      >
+      <app-warning-banner *ngIf="showErrors && localGovernment && localGovernment.matchesUserGuid" class="full-row">
         You're logged in with a Business BCeID that is associated with the government selected above. You will have the
         opportunity to complete the local or first nation government review form immediately after this application is
         submitted.
