--- a/portal-frontend/src/app/features/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
@@ -4,9 +4,11 @@
 
 <div mat-dialog-content class="content">
   <p>
-    Your application will be submitted to the {{ data.governmentName }}. After submission, you will be auto-directed to
-    complete the local or first nation government review form in order to submit this application to the Agricultural
-    Land Commission.
+    Your application will be submitted to the {{ data.governmentName }}.
+    <span *ngIf="data.userIsGovernment"
+      >After submission, you will be auto-directed to complete the local or first nation government review form in order
+      to submit this application to the Agricultural Land Commission.
+    </span>
   </p>
   <div>
     <div class="subheading2">Terms and Conditions:</div>
