--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/turp/turp.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/turp/turp.component.html
@@ -9,5 +9,6 @@
   <div>
     <div class="subheading2">Expiry Date</div>
     {{ component.expiryDate | date }}
+    <app-no-data *ngIf="component.expiryDate === null || component.expiryDate === undefined"></app-no-data>
   </div>
 </div>
