--- a/alcs-frontend/src/app/shared/no-data/no-data.component.html
+++ b/alcs-frontend/src/app/shared/no-data/no-data.component.html
@@ -1,5 +1,5 @@
 <div class="no-data">
-  <div class="text">No Data</div>
+  <div class="text">{{ text ? text : 'No Data' }}</div>
   <div class="subtext error" *ngIf="showRequired">
     <mat-icon>warning</mat-icon>
     Required Field
