--- a/alcs-frontend/src/app/features/application/decision/conditions/conditions.component.html
+++ b/alcs-frontend/src/app/features/application/decision/conditions/conditions.component.html
@@ -54,8 +54,8 @@
           </ng-container>
         </div>
       </div>
-      <div class="no-conditions" *ngIf="decision.conditions && decision.conditions.length < 1">
-        No conditions added. Return to decision draft to add conditions.
+      <div class="no-conditions" *ngIf="decision.conditions.length < 1">
+        <app-no-data text="No conditions added. Return to decision draft to add conditions."></app-no-data>
       </div>
       <div *ngFor="let condition of decision.conditions; let j = index">
         <app-condition
