--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/basic/basic.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/basic/basic.component.html
@@ -2,9 +2,11 @@
   <div *ngIf="component.agCapMap">
     <div class="subheading2">Ag Cap Map</div>
     {{ component.agCapMap }}
+    <app-no-data *ngIf="component.agCapMap === null || component.agCapMap === undefined"></app-no-data>
   </div>
   <div *ngIf="component.agCapConsultant">
     <div class="subheading2">Ag Cap Consultant</div>
     {{ component.agCapConsultant }}
+    <app-no-data *ngIf="component.agCapConsultant === null || component.agCapConsultant === undefined"></app-no-data>
   </div>
 </div>
