--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pofo/pofo.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/pofo/pofo.component.html
@@ -9,11 +9,13 @@
   <div>
     <div class="subheading2">Use End Date</div>
     {{ component.endDate | date }}
+    <app-no-data *ngIf="component.endDate === null || component.endDate === undefined"></app-no-data>
   </div>
 </div>
 <div class="full-width">
   <div class="subheading2">Type, origin and quality of fill proposed to be placed.</div>
   <div class="pre-wrapped-text">{{ component.soilFillTypeToPlace }}</div>
+  <app-no-data *ngIf="component.soilFillTypeToPlace === null || component.soilFillTypeToPlace === undefined"></app-no-data>
 </div>
 <div class="full-width">
   <table>
@@ -25,6 +27,7 @@
       <tr>
         <td class="soil-table-label">Volume</td>
         <td>{{ component.soilToPlaceVolume }} m<sup>3</sup></td>
+        <app-no-data *ngIf="component.soilToPlaceVolume === null || component.soilToPlaceVolume === undefined"></app-no-data>
       </tr>
       <tr>
         <td class="soil-table-label">
@@ -32,14 +35,17 @@
           <div class="subtext">Note: 0.01 ha is 100m2</div>
         </td>
         <td>{{ component.soilToPlaceArea }} ha</td>
+        <app-no-data *ngIf="component.soilToPlaceArea === null || component.soilToPlaceArea === undefined"></app-no-data>
       </tr>
       <tr>
         <td class="soil-table-label">Maximum Depth</td>
         <td>{{ component.soilToPlaceMaximumDepth }} m</td>
+        <app-no-data *ngIf="component.soilToPlaceMaximumDepth === null || component.soilToPlaceMaximumDepth === undefined"></app-no-data>
       </tr>
       <tr>
         <td class="soil-table-label">Average Depth</td>
         <td>{{ component.soilToPlaceAverageDepth }} m</td>
+        <app-no-data *ngIf="component.soilToPlaceAverageDepth === null || component.soilToPlaceAverageDepth === undefined"></app-no-data>
       </tr>
     </tbody>
   </table>
