--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/roso/roso.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-component/roso/roso.component.html
@@ -9,11 +9,13 @@
   <div>
     <div class="subheading2">Use End Date</div>
     {{ component.endDate | date }}
+    <app-no-data *ngIf="component.endDate === null || component.endDate === undefined"></app-no-data>
   </div>
 </div>
 <div class="full-width">
   <div class="subheading2">Type of soil approved to be removed.</div>
   <div class="pre-wrapped-text">{{ component.soilTypeRemoved }}</div>
+  <app-no-data *ngIf="component.soilTypeRemoved === null || component.soilTypeRemoved === undefined"></app-no-data>
 </div>
 <div class="full-width">
   <table>
@@ -25,18 +27,22 @@
       <tr>
         <td class="soil-table-label">Volume</td>
         <td>{{ component.soilToRemoveVolume }} m<sup>3</sup></td>
+        <app-no-data *ngIf="component.soilToRemoveVolume === null || component.soilToRemoveVolume === undefined"></app-no-data>
       </tr>
       <tr>
         <td class="soil-table-label">Area</td>
         <td>{{ component.soilToRemoveArea }} ha</td>
+        <app-no-data *ngIf="component.soilToRemoveArea === null || component.soilToRemoveArea === undefined"></app-no-data>
       </tr>
       <tr>
         <td class="soil-table-label">Maximum Depth</td>
         <td>{{ component.soilToRemoveMaximumDepth }} m</td>
+        <app-no-data *ngIf="component.soilToRemoveMaximumDepth === null || component.soilToRemoveMaximumDepth === undefined"></app-no-data>
       </tr>
       <tr>
         <td class="soil-table-label">Average Depth</td>
         <td>{{ component.soilToRemoveAverageDepth }} m</td>
+        <app-no-data *ngIf="component.soilToRemoveAverageDepth === null || component.soilToRemoveAverageDepth === undefined"></app-no-data>
       </tr>
     </tbody>
   </table>
