--- a/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
+++ b/alcs-frontend/src/app/features/application/decision/decision-v2/decision-v2.component.scss
@@ -83,6 +83,11 @@
     font-size: 16px;
   }
 
+  .components-wrapper,
+  .conditions-wrapper {
+    margin-bottom: 36px;
+  }
+
   .subheading2 {
     margin-bottom: 6px !important;
   }
