--- a/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.scss
+++ b/alcs-frontend/src/app/features/application/lfng-info/lfng-info.component.scss
@@ -21,9 +21,12 @@ h4 {
 }
 
 .comment-container {
-  @extend .warning;
-  flex-direction: column;
   align-items: flex-start;
+  background-color: colors.$secondary-color-light;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
 
   div {
     margin-bottom: 4px;
