--- a/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.scss
+++ b/portal-frontend/src/app/features/view-submission/lfng-review/lfng-review.component.scss
@@ -15,9 +15,13 @@
 }
 
 .comment-container {
-  @extend .warning;
-  flex-direction: column;
   align-items: flex-start;
+  background-color: rgba(colors.$accent-color-light, 0.5);
+  border-radius: rem(4);
+  display: flex;
+  flex-direction: column;
+  margin-bottom: rem(24);
+  padding: rem(16);
 
   div {
     margin-bottom: rem(4);
